--- a/ureport2-core/pom.xml
+++ b/ureport2-core/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>ureport2-core</artifactId>
+	<artifactId>ureport2-core-hj</artifactId>
 	<version>2.2.9</version>
 	<parent>
-		<groupId>com.bstek.ureport</groupId>
-		<artifactId>ureport2-parent</artifactId>
+		<groupId>com.huiju</groupId>
+		<artifactId>ureport2-parent-hj</artifactId>
 		<version>2.0.6</version>
 	</parent>
 	<dependencies>
@@ -85,30 +85,4 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	<licenses>
-		<license>
-			<name>The Apache License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-		</license>
-	</licenses>
-	<developers>
-		<developer>
-			<name>Gaojie</name>
-			<email>jacky.gao@bstek.com</email>
-			<organization>Bstek</organization>
-			<organizationUrl>http://www.bstek.com</organizationUrl>
-		</developer>
-	</developers>
-	<scm>
-		<connection>scm:git:https://github.com/youseries/ureport.git</connection>
-		<developerConnection>scm:git:git@github.com:youseries/ureport.git</developerConnection>
-		<url>https://github.com/youseries/ureport</url>
-    <tag>ureport2-core-2.2.4</tag>
-  </scm>
-	<organization>
-		<name>Bstek</name>
-		<url>http://www.bstek.com</url>
-	</organization>	
-	<name>UReport2 Core Project</name>
-	<url>https://github.com/youseries/ureport/tree/master/ureport2-core</url>
 </project>
