--- a/ureport2-console/pom.xml
+++ b/ureport2-console/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>ureport2-console-hj</artifactId>
-	<version>2.2.9</version>
+	<artifactId>ureport2-console</artifactId>
+	<version>2.2.9-huiju</version>
 	<parent>
-		<groupId>com.huiju</groupId>
-		<artifactId>ureport2-parent-hj</artifactId>
-		<version>2.0.6</version>
+		<groupId>com.bstek.ureport</groupId>
+		<artifactId>ureport2-parent</artifactId>
+		<version>2.0.6-huiju</version>
 	</parent>
 	<dependencies>
 		<dependency>
@@ -20,9 +20,9 @@
 			<version>1.7</version>
 		</dependency>
 		<dependency>
-			<groupId>com.huiju</groupId>
-			<artifactId>ureport2-core-hj</artifactId>
-			<version>2.2.9</version>
+			<groupId>com.bstek.ureport</groupId>
+			<artifactId>ureport2-core</artifactId>
+			<version>2.2.9-huiju</version>
 		</dependency>		
 		<dependency>
 			<groupId>javax.servlet</groupId>
